# noetix-rag

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  main.py  pyproject.toml
docs/: API.md  ARCHITECTURE.md  EVALS.md  IMPLEMENTATION.md  PRD.md  README.md  SDD.md
docs/agents/: RAG-PIPELINE.md
docs/plans/: 2026-03-16-memory-sessions-design.md
frontend/: .env.example  .gitignore  eslint_report.json  index.html  package.json  pnpm-lock.yaml  skills-lock.json
frontend/src/: App.tsx  index.css
frontend/src/layouts/: MainLayout.tsx
frontend/src/mocks/: authService.ts  chatService.ts  data.ts  documentService.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  KnowledgeBase.tsx  Login.tsx  Reader.tsx  (+2 more)
infra/: README.md  main.bicep  main.parameters.json  metadata.json
infra/modules/: model-deployment.bicep  project.bicep
migrations/: env.py
migrations/versions/: d45c6b1336f8_initial.py  e8f13cb19988_initial_schema.py
src/: main.py
src/agents/: ai_project_provider.py  azureopenai_provider.py  base_agent.py  memory_provider.py  ollama_provider.py  openai_provider.py  orchestrator.py  qdrant_memory_provider.py  rag_agent.py  session_manager.py  socratic_agent.py  teacher_agent.py  triage_agent.py
src/api/: __init__.py  dependencies.py
src/application/: __init__.py
src/config/: __init__.py  dependencies.py  settings.py
src/infrastructure/: __init__.py
tests/http/: api-tests.http
tests/integration/: test_api.py
tests/unit/: __init__.py  test_entities.py  test_interfaces.py  test_rag_pipeline.py  test_repositories.py  test_services.py
(+57 files in other folders)
