[project]
name = "mh-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.0.0rc2",
    "azure-storage-blob>=12.29.0b1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.1",
    "uvicorn>=0.41.0",
]

[tool.hatch.package]
src = "src"



