[project]
name = "mh-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.0.0rc2",
    "alembic>=1.18.4",
    "azure-storage-blob>=12.29.0b1",
    "bcrypt>=5.0.0",
    "chunking-evaluation",
    "docling>=2.80.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.1",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "qdrant-client>=1.17.0",
    "redis>=7.1.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.1.0b1",
    "uvicorn>=0.41.0",
]

[tool.hatch.package]
src = "src"

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
chunking-evaluation = { git = "https://github.com/brandonstarxel/chunking_evaluation.git" }



